# econox

./: CITATION.cff  README.md  index.html  pyproject.toml
.github/workflows/: docs.yml  docs_latest.yml  docs_stable.yaml  docs_test.yml  prepare_release.yml  publish.yml
docs/source/: api_reference.rst  conf.py
examples/: 0_benchmark_rust.ipynb  1_quickstart.ipynb  quickstart.ipynb
latest/: .buildinfo  api_reference.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
latest/.doctrees/: api_reference.doctree  environment.pickle
latest/_modules/: index.html
latest/_modules/econox/: optim.html  protocols.html  utils.html
latest/_static/: documentation_options.js
src/econox/: __init__.py  config.py  optim.py  protocols.py  utils.py
src/econox/components/: distribution.py  feedback.py  utility.py
src/econox/logic/: __init__.py  distribution.py  dynamics.py  feedback.py  utility.py
stable/: .buildinfo  api_reference.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html
stable/.doctrees/: environment.pickle
stable/_modules/: index.html
tests/: test_estimation_method.py  test_ge.py  test_nfxp.py  test_utility.py  test_value_iteration.py
v0.1.0a1/: .buildinfo  objects.inv  py-modindex.html  search.html  searchindex.js
v0.1.1/: .buildinfo  genindex.html  index.html  search.html
v0.1.1/.doctrees/: api_reference.doctree
v0.1.2/: api_reference.html  index.html  objects.inv  py-modindex.html  searchindex.js
v0.1.2/.doctrees/: api_reference.doctree  environment.pickle  index.doctree
(+63 files in other folders)
