[project]
name = "econox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ito-haru", email = "harutoito@g.ecc.u-tokyo.ac.jp" }
]
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "equinox>=0.13.2",
    "jax>=0.8.1",
    "optimistix>=0.0.11",
    "pandas>=2.3.3",
]

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[tool.basedpyright]
typeCheckingMode = "standard"

# JAX/Equinox
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnknownVariableType = false

reportMissingImports = true
